@@ -1,3 +1,13 @@
+2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AspNetEdit.addin.xml:
+	* AspNetEdit.Editor/EditorHost.cs:
+	* AspNetEdit.Integration/GeckoWebBrowser.cs:
+	* AspNetEdit.Integration/MonoDevelopProxy.cs:
+	* AspNetEdit.Integration/AspNetEditViewContent.cs: Merged
+	  MD.Projects into MD.Core, and MD.Projects.Gui, MD.Core.Gui
+	  and MD.Components into MD.Ide.
+
 2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* AspNetEdit.sln: The invariant policy can't be used anymore
